// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error renders with msg "Error" 1`] = `
<div>
  An error occurred:
  <div>
    Error
  </div>
</div>
`;

exports[`Error renders without msg 1`] = `
<div>
  An error occurred:
  <div>
    
  </div>
</div>
`;
